--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
     <a-scene mindar-image="imageTargetSrc: ./data/targets.mind;" vr-mode-ui="enabled: false" device-orientation-permission-ui="enabled: false">
       <a-camera position="0 0 0" look-controls="enabled: false"></a-camera>
       <a-entity mindar-image-target="targetIndex: 0">
-        <a-entity position = "0 0 0" rotation = "90 0 0" scale="5 5 5 " gltf-model="data/board_AR.glb" animation-mixer=“clip: rot” ></a-entity>
+        <a-entity position = "0 0 0" rotation = "90 0 0" scale="5 5 5 " gltf-model="data/board_AR.glb" animation-mixer="clip: rot" ></a-entity>
       </a-entity>
     </a-scene>
   </body>
