--- a/index.html
+++ b/index.html
@@ -4,12 +4,13 @@
     <script src="https://cdn.jsdelivr.net/gh/hiukim/mind-ar-js@1.1.5/dist/mindar-image.prod.js"></script>
     <script src="https://aframe.io/releases/1.2.0/aframe.min.js"></script>
     <script src="https://cdn.jsdelivr.net/gh/hiukim/mind-ar-js@1.1.5/dist/mindar-image-aframe.prod.js"></script>
+    <script src="https://cdn.jsdelivr.net/gh/donmccurdy/aframe-extras@v6.1.1/dist/aframe-extras.min.js"</script>
   </head>
   <body>
     <a-scene mindar-image="imageTargetSrc: ./data/targets.mind;" vr-mode-ui="enabled: false" device-orientation-permission-ui="enabled: false">
       <a-camera position="0 0 0" look-controls="enabled: false"></a-camera>
       <a-entity mindar-image-target="targetIndex: 0">
-        <a-entity position = "0 0 0" rotation = "90 0 0" scale="5 5 5 " gltf-model="data/board_AR.glb" animation-mixer="clip: rot" ></a-entity>
+        <a-entity position = "0 0 0" rotation = "90 0 0" scale="5 5 5 " gltf-model="data/board_AR.glb" animation-mixer ></a-entity>
       </a-entity>
     </a-scene>
   </body>
